fixes the "other" fields in pre-register forms (both)

--- a/source/pre-register-form.html
+++ b/source/pre-register-form.html
@@ -156,8 +156,8 @@ addjs: pre-register-form.js
 <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.958755899" value="Prefer not to say" id="group_958755899_4" role="radio" class="ss-q-radio" aria-label="Prefer not to say" required="" aria-required="true"></span>
 <span class="ss-choice-label">Prefer not to say</span>
 </label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.958755899" value="__other_option__" id="group_958755899_5" role="radio" class="ss-q-radio ss-q-other-toggle" required="" aria-required="true"></span>
-<span class="ss-choice-label">Other:</span></label>
-<span class="ss-q-other-container goog-inline-block"><input type="text" name="entry.958755899.other_option_response" value="" class="ss-q-other" id="entry_958755899_other_option_response" dir="auto" aria-label="Other"></span>
+<span class="ss-choice-label">&nbsp;</span></label>
+<span class="ss-q-other-container goog-inline-block"><input type="text" name="entry.958755899.other_option_response" value="" placeholder="Other:" class="ss-q-other" id="entry_958755899_other_option_response" dir="auto" aria-label="Other"></span>
 </li></ul>
 <div class="error-message" id="1010461108_errorMessage"></div>
 <div class="required-message">This is a required question</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
@@ -193,8 +193,8 @@ addjs: pre-register-form.js
 <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1214914657" value="Student" id="group_1214914657_8" role="radio" class="ss-q-radio" aria-label="Student" required="" aria-required="true"></span>
 <span class="ss-choice-label">Student</span>
 </label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1214914657" value="__other_option__" id="group_1214914657_9" role="radio" class="ss-q-radio ss-q-other-toggle" required="" aria-required="true"></span>
-<span class="ss-choice-label">Other:</span></label>
-<span class="ss-q-other-container goog-inline-block"><input type="text" name="entry.1214914657.other_option_response" value="" class="ss-q-other" id="entry_1214914657_other_option_response" dir="auto" aria-label="Other"></span>
+<span class="ss-choice-label">&nbsp;</span></label>
+<span class="ss-q-other-container goog-inline-block"><input placeholder="Other:" type="text" name="entry.1214914657.other_option_response" value="" class="ss-q-other" id="entry_1214914657_other_option_response" dir="auto" aria-label="Other"></span>
 </li></ul>
 <div class="error-message" id="234022177_errorMessage"></div>
 <div class="required-message">This is a required question</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
