--- a/source/pre-register-form_es.html
+++ b/source/pre-register-form_es.html
@@ -124,7 +124,7 @@ addjs: pre-register-form.js
 <span class="ss-choice-label">América Latina y Caribe</span>
 </label></li> <li class="ss-choice-item">
 <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.466055162" value="Middle East &amp; North Africa" id="group_466055162_4" role="radio" class="ss-q-radio" aria-label="Medio Oriente y África del Norte" required="" aria-required="true"></span>
-<span class="ss-choice-label">Medio Oriente y África del Norte</span>
+<span class="ss-choice-label" style="letter-spacing: -.3px">Medio Oriente y África del Norte</span>
 </label></li> <li class="ss-choice-item">
 <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.466055162" value="North America" id="group_466055162_5" role="radio" class="ss-q-radio" aria-label="América del Norte" required="" aria-required="true"></span>
 <span class="ss-choice-label">América del Norte</span>
@@ -157,8 +157,8 @@ addjs: pre-register-form.js
 <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.958755899" value="Prefer not to say" id="group_958755899_4" role="radio" class="ss-q-radio" aria-label="Preferís no decirlo" required="" aria-required="true"></span>
 <span class="ss-choice-label">Preferís no decirlo</span>
 </label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.958755899" value="__other_option__" id="group_958755899_5" role="radio" class="ss-q-radio ss-q-other-toggle" required="" aria-required="true"></span>
-<span class="ss-choice-label">Preferís auto-describirte:</span></label>
-<span class="ss-q-other-container goog-inline-block"><input type="text" name="entry.958755899.other_option_response" value="" class="ss-q-other" id="entry_958755899_other_option_response" dir="auto" aria-label="Preferís auto-describirte"></span>
+<span class="ss-choice-label">&nbsp;</span></label>
+<span class="ss-q-other-container goog-inline-block"><input placeholder="Preferís auto-describirte:" type="text" name="entry.958755899.other_option_response" value="" class="ss-q-other" id="entry_958755899_other_option_response" dir="auto" aria-label="Preferís auto-describirte"></span>
 </li></ul>
 <div class="error-message" id="1010461108_errorMessage"></div>
 <div class="required-message">Esta pregunta es obligatoria</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
@@ -194,8 +194,8 @@ addjs: pre-register-form.js
 <label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1214914657" value="Student" id="group_1214914657_8" role="radio" class="ss-q-radio" aria-label="Estudiante" required="" aria-required="true"></span>
 <span class="ss-choice-label">Estudiante</span>
 </label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1214914657" value="__other_option__" id="group_1214914657_9" role="radio" class="ss-q-radio ss-q-other-toggle" required="" aria-required="true"></span>
-<span class="ss-choice-label">Otro:</span></label>
-<span class="ss-q-other-container goog-inline-block"><input type="text" name="entry.1214914657.other_option_response" value="" class="ss-q-other" id="entry_1214914657_other_option_response" dir="auto" aria-label="Otro"></span>
+<span class="ss-choice-label">&nbsp;</span></label>
+<span class="ss-q-other-container goog-inline-block"><input placeholder="Otro:" type="text" name="entry.1214914657.other_option_response" value="" class="ss-q-other" id="entry_1214914657_other_option_response" dir="auto" aria-label="Otro"></span>
 </li></ul>
 <div class="error-message" id="234022177_errorMessage"></div>
 <div class="required-message">Esta pregunta es obligatoria</div></div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
@@ -272,7 +272,7 @@ addjs: pre-register-form.js
 <input type="hidden" name="fbzx" value="1084181022544073787">
 
 <div class="ss-item ss-navigate"><table id="navigation-table"><tbody><tr><td class="ss-form-entry goog-inline-block" id="navigation-buttons" dir="ltr">
-<input type="submit" name="submit" value="Submit" id="ss-submit" class="jfk-button jfk-button-action ">
+<input type="submit" name="submit" value="Enviar" id="ss-submit" class="jfk-button jfk-button-action ">
 </td>
 </tr></tbody></table></div></ol></form>
 
