Update call for proposals link

--- a/source/call-for-proposals.html
+++ b/source/call-for-proposals.html
@@ -17,7 +17,7 @@ lang: en
   </div>
 
   <div class="section">
-    <a class="button" href="/conferences/iodc18/program/proposals/new">Submit Proposal</a>
+    <a class="button" href="/call-for-proposals-form.html">Submit Proposal</a>
   </div>
 
   <div class="section cfp long-text long-text--negative">
