--- a/source/call-for-proposals_es.html
+++ b/source/call-for-proposals_es.html
@@ -17,7 +17,7 @@ lang: es
   </div>
 
   <div class="section">
-    <a class="button" href="/conferences/iodc18/program/proposals/new">ENVIAR PROPUESTA</a>
+    <a class="button" href="/call-for-proposals-form.html">ENVIAR PROPUESTA</a>
   </div>
 
   <div class="section cfp long-text long-text--negative">
