--- a/source/about.html
+++ b/source/about.html
@@ -37,7 +37,7 @@ lang: en
 
   <div class="section">
     <a class="button" href="/conferences/pre-registration/register/new">Pre-Register</a>
-    <a class="button" href="/conferences/iodc18/program/proposals/new">Submit Proposal</a>
+    <a class="button" href="/call-for-proposals-form.html">Submit Proposal</a>
   </div>
 </main>
 
