--- a/source/form.html
+++ b/source/form.html
@@ -34,7 +34,7 @@ lang: en
 
 
     <div class="section">
-      <a class="button" href="/conferences/iodc18/program/proposals/new">Submit</a>
+      <a class="button" href="/call-for-proposals-form.html">Submit</a>
     </div>
   </form>
 
