Update pre register form

--- a/source/about_es.html
+++ b/source/about_es.html
@@ -35,7 +35,7 @@ lang: es
   </div>
 
   <div class="section">
-    <a class="button" href="/conferences/pre-registration/register/new">Pre Registro</a>
+    <a class="button" href="//pre-register-form.html">Pre Registro</a>
     <a class="button" href="/call-for-proposals-form.html">Llamado a Propuestas</a>
   </div>
 </main>
