--- a/source/code-of-conduct.html
+++ b/source/code-of-conduct.html
@@ -41,7 +41,7 @@ lang: en
   </div>
 
  <div class="section">
-    <a class="button" href="/conferences/pre-registration/register/new">Pre-Register</a>
+    <a class="button" href="//pre-register-form.html">Pre-Register</a>
     <a class="button" href="/call-for-proposals-form.html">Submit Proposal</a>
   </div>
 </main>
