--- a/source/committee_es.html
+++ b/source/committee_es.html
@@ -22,7 +22,7 @@ lang: es
   </ul>
 
   <div class="section">
-    <a class="button" href="/conferences/pre-registration/register/new">PRE REGISTRO</a>
+    <a class="button" href="//pre-register-form.html">PRE REGISTRO</a>
     <a class="button" href="/call-for-proposals-form.html">LLAMADO A PROPUESTAS</a>
   </div>
 </main>
