--- a/source/index_es.html
+++ b/source/index_es.html
@@ -13,7 +13,7 @@ hide_back_button: true
   </div>
 
   <nav class="main-menu">
-    <a class="button" href="/conferences/pre-registration/register/new">PRE REGISTRO</a>
+    <a class="button" href="//pre-register-form.html">PRE REGISTRO</a>
     <a class="button" href="/call-for-proposals.html">LLAMADO A PROPUESTAS</a>
     <a class="button" href="/about.html">ACERCA DE IODC 2018</a>
     <a class="button" href="/committee.html">COMITÉ ACADÉMICO</a>
