--- a/source/register.html
+++ b/source/register.html
@@ -10,7 +10,7 @@ lang: en
   </div>
 
   <div class="section">
-    <a class="button" href="/conferences/pre-registration/register/new">Pre-Register</a>
+    <a class="button" href="//pre-register-form.html">Pre-Register</a>
   </div>
 
   <div class="section long-text long-text--negative">
