--- a/source/committee.html
+++ b/source/committee.html
@@ -22,7 +22,7 @@ lang: en
   </ul>
 
   <div class="section">
-    <a class="button" href="/conferences/pre-registration/register/new">Pre-Register</a>
+    <a class="button" href="//pre-register-form.html">Pre-Register</a>
     <a class="button" href="/call-for-proposals-form.html">Submit Proposal</a>
   </div>
 </main>
