--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@ hide_back_button: true
   </div>
 
   <nav class="main-menu">
-    <a class="button" href="/conferences/pre-registration/register/new">Pre-Register</a>
+    <a class="button" href="/pre-register-form.html">Pre-Register</a>
     <a class="button" href="/call-for-proposals.html">Call for Proposals</a>
     <a class="button" href="/about.html">About</a>
     <a class="button" href="/committee.html">Programme Committee</a>
