--- a/source/about_es.html
+++ b/source/about_es.html
@@ -35,8 +35,8 @@ lang: es
   </div>
 
   <div class="section">
-    <a class="button" href="/conferences/pre-registration/register/new">Pre Registro</a>
-    <a class="button" href="/conferences/iodc18/program/proposals/new">Llamado a Propuestas</a>
+    <a class="button" href="/pre-register-form.html">Pre Registro</a>
+    <a class="button" href="/call-for-proposals-form.html">Llamado a Propuestas</a>
   </div>
 </main>
 
