--- a/source/code-of-conduct.html
+++ b/source/code-of-conduct.html
@@ -41,8 +41,8 @@ lang: en
   </div>
 
  <div class="section">
-    <a class="button" href="/conferences/pre-registration/register/new">Pre-Register</a>
-    <a class="button" href="/conferences/iodc18/program/proposals/new">Submit Proposal</a>
+    <a class="button" href="/pre-register-form.html">Pre-Register</a>
+    <a class="button" href="/call-for-proposals-form.html">Submit Proposal</a>
   </div>
 </main>
 
