--- a/source/call-for-proposals-form_es.html
+++ b/source/call-for-proposals-form_es.html
@@ -420,6 +420,7 @@ lang: es
       <tr>
         <th>Nombre </th>
         <th>Organizacion</th>
+        <th>Region</th>
         <th>Genero</th>
       </tr>
     </thead>
@@ -434,10 +435,26 @@ lang: es
             title="">
         </td>
         <td>
+          <div class="select">
+            <select name="__entry_region__" aria-label="Region  ">
+              <option value=""></option>
+              <option value="Asia del Este y Pacifico">Asia del Este y Pacifico</option>
+              <option value="Europa y Asia Central">Europa y Asia Central</option>
+              <option value="America Latina y Caribe">America Latina y Caribe</option>
+              <option value="Medio Oriente y Africa del Norte">Medio Oriente y Africa del Norte</option>
+              <option value="America del Norte">America del Norte</option>
+              <option value="Asia del Sur">Asia del Sur</option>
+              <option value="Africa Sub-Sahariana">Africa Sub-Sahariana</option>
+            </select>
+          </div>
+        </td>
+        <td>
           <div class="select"><select name="__entry_gender__" aria-label="Género  ">
             <option value=""></option>
             <option value="Female">Mujer</option>
             <option value="Male">Hombre</option>
+            <option value="Genero no-binario">Genero no-binario</option>
+            <option value="Preferis no decirlo">Preferis no decirlo</option>
             <option value="Other">Otra</option>
           </select></div>
         </td>
@@ -517,31 +534,33 @@ lang: es
       {
         name: "entry.107602731",
         organization: "entry.281440977",
+        region: "entry.1926401346",
         gender: "entry.685240374",
       }, {
         name: "entry.64514545",
         organization: "entry.259539288",
+        region: "entry.1268636920",
         gender: "entry.1300212811",
       }, {
         name: "entry.57871850",
         organization: "entry.213084005",
+        region: "entry.1215976330",
         gender: "entry.975027244",
       }, {
         name: "entry.1935240492",
         organization: "entry.208841777",
+        region: "entry.1356013211",
         gender: "entry.1941791036",
       }, {
         name: "entry.1013842153",
         organization: "entry.1648063217",
+        region: "entry.1306274696",
         gender: "entry.1463420630",
       }, {
         name: "entry.402320172",
         organization: "entry.767213139",
+        region: "entry.1726216341",
         gender: "entry.293176972",
-      }, {
-        name: "entry.1523702849",
-        organization: "entry.1969441950",
-        gender: "entry.88914345",
       }
     ];
 
@@ -562,6 +581,7 @@ lang: es
     newRow.innerHTML = newRow.innerHTML
       .replace('__entry_name__', participantsEntryNames[ix].name)
       .replace('__entry_organization__', participantsEntryNames[ix].organization)
+      .replace('__entry_region__', participantsEntryNames[ix].region)
       .replace('__entry_gender__', participantsEntryNames[ix].gender);
 
     wrapper.appendChild(newRow);
