changed resources to  checkboxes

--- a/source/call-for-proposals-form_es.html
+++ b/source/call-for-proposals-form_es.html
@@ -380,34 +380,56 @@ lang: es
 
 <textarea name="entry.238007859" rows="8" cols="0" class="ss-q-long" id="entry_238007859" dir="auto" aria-label="Formato: Información Adicional  "></textarea>
 <div class="error-message" id="710259911_errorMessage"></div>
-<div class="required-message">Esta pregunta es obligatoria</div>
+
 </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-radio"><div class="ss-form-entry">
 <label class="ss-q-item-label" for="entry_2059408904"><div class="ss-q-title">Recursos Requeridos
 <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
-<span class="ss-required-asterisk" aria-hidden="true">*</span></div>
+
 <div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
 
-
-<ul class="ss-choices" role="radiogroup" aria-label="Recursos Requeridos  "><li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.2014351691" value="Wifi" id="group_2014351691_1" role="radio" class="ss-q-radio" aria-label="Wifi" required="" aria-required="true"></span>
+<ul class="ss-choices" role="group" aria-label="Resources Required  "><li class="ss-choice-item">
+<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Wifi" id="group_2014351691_1" role="checkbox" class="ss-q-checkbox"></span>
 <span class="ss-choice-label">Wifi</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.2014351691" value="Computer" id="group_2014351691_2" role="radio" class="ss-q-radio" aria-label="Computadora" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Computer" id="group_2014351691_2" role="checkbox" class="ss-q-checkbox"></span>
+<span class="ss-choice-label">Computer</span>
+</label></li> <li class="ss-choice-item">
+<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Projector" id="group_2014351691_3" role="checkbox" class="ss-q-checkbox"></span>
+<span class="ss-choice-label">Projector</span>
+</label></li> <li class="ss-choice-item">
+<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Microphone" id="group_2014351691_4" role="checkbox" class="ss-q-checkbox"></span>
+<span class="ss-choice-label">Microphone</span>
+</label></li> <li class="ss-choice-item">
+<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Flipchart" id="group_2014351691_5" role="checkbox" class="ss-q-checkbox"></span>
+<span class="ss-choice-label">Flipchart</span>
+</label></li> <li class="ss-choice-item">
+<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Pens" id="group_2014351691_6" role="checkbox" class="ss-q-checkbox"></span>
+<span class="ss-choice-label">Pens</span>
+</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="__other_option__" id="group_2014351691_7" role="checkbox" class="ss-q-checkbox ss-q-other-toggle"></span>
+<span class="ss-choice-label">&nbsp;</span></label>
+<span class="ss-q-other-container goog-inline-block"><input type="text" placeholder="Other:" name="entry.2014351691.other_option_response" value="" class="ss-q-other" id="entry_2014351691_other_option_response" dir="auto" aria-label="Other"></span>
+</li></ul>
+
+<ul class="ss-choices" role="group" aria-label="Recursos Requeridos  "><li class="ss-choice-item">
+<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Wifi" id="group_2014351691_1" role="checkbox" class="ss-q-checkbox" aria-label="Wifi" required="" aria-required="true"></span>
+<span class="ss-choice-label">Wifi</span>
+</label></li> <li class="ss-choice-item">
+<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Computer" id="group_2014351691_2" role="checkbox" class="ss-q-checkbox" aria-label="Computadora" required="" aria-required="true"></span>
 <span class="ss-choice-label">Computadora</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.2014351691" value="Projector" id="group_2014351691_3" role="radio" class="ss-q-radio" aria-label="Proyector" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Projector" id="group_2014351691_3" role="checkbox" class="ss-q-checkbox" aria-label="Proyector" required="" aria-required="true"></span>
 <span class="ss-choice-label">Proyector</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.2014351691" value="Microphone" id="group_2014351691_4" role="radio" class="ss-q-radio" aria-label="Micrófono" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Microphone" id="group_2014351691_4" role="checkbox" class="ss-q-checkbox" aria-label="Micrófono" required="" aria-required="true"></span>
 <span class="ss-choice-label">Micrófono</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.2014351691" value="Flipchart" id="group_2014351691_5" role="radio" class="ss-q-radio" aria-label="Rotafolio" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Flipchart" id="group_2014351691_5" role="checkbox" class="ss-q-checkbox" aria-label="Rotafolio" required="" aria-required="true"></span>
 <span class="ss-choice-label">Rotafolio</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.2014351691" value="Pens" id="group_2014351691_6" role="radio" class="ss-q-radio" aria-label="Lapiceras" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Pens" id="group_2014351691_6" role="checkbox" class="ss-q-checkbox" aria-label="Lapiceras" required="" aria-required="true"></span>
 <span class="ss-choice-label">Lapiceras</span>
-</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.2014351691" value="__other_option__" id="group_2014351691_7" role="radio" class="ss-q-radio ss-q-other-toggle" required="" aria-required="true"></span>
+</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="__other_option__" id="group_2014351691_7" role="radio" class="ss-q-checkbox ss-q-other-toggle" required="" aria-required="true"></span>
 <span class="ss-choice-label">&nbsp;</span></label>
 <span class="ss-q-other-container goog-inline-block"><input type="text" name="entry.2014351691.other_option_response" placeholder="Otras Necesidades:" value="" class="ss-q-other" id="entry_2014351691_other_option_response" dir="auto" aria-label="Otras Necesidades"></span>
 </li></ul>
