--- a/source/call-for-proposals-form.html
+++ b/source/call-for-proposals-form.html
@@ -379,39 +379,40 @@ lang: en
 
 <textarea name="entry.238007859" rows="8" cols="0" class="ss-q-long" id="entry_238007859" dir="auto" aria-label="Format: Additional Information  "></textarea>
 <div class="error-message" id="710259911_errorMessage"></div>
-<div class="required-message">This is a required question</div>
+
 </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-radio"><div class="ss-form-entry">
 <label class="ss-q-item-label" for="entry_2059408904"><div class="ss-q-title">Resources Required
 <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
-<span class="ss-required-asterisk" aria-hidden="true">*</span></div>
+</div>
 <div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
 
 
-<ul class="ss-choices" role="radiogroup" aria-label="Resources Required  "><li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.2014351691" value="Wifi" id="group_2014351691_1" role="radio" class="ss-q-radio" aria-label="Wifi" required="" aria-required="true"></span>
+<ul class="ss-choices" role="group" aria-label="Resources Required  "><li class="ss-choice-item">
+<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Wifi" id="group_2014351691_1" role="checkbox" class="ss-q-checkbox"></span>
 <span class="ss-choice-label">Wifi</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.2014351691" value="Computer" id="group_2014351691_2" role="radio" class="ss-q-radio" aria-label="Computer" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Computer" id="group_2014351691_2" role="checkbox" class="ss-q-checkbox"></span>
 <span class="ss-choice-label">Computer</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.2014351691" value="Projector" id="group_2014351691_3" role="radio" class="ss-q-radio" aria-label="Projector" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Projector" id="group_2014351691_3" role="checkbox" class="ss-q-checkbox"></span>
 <span class="ss-choice-label">Projector</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.2014351691" value="Microphone" id="group_2014351691_4" role="radio" class="ss-q-radio" aria-label="Microphone" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Microphone" id="group_2014351691_4" role="checkbox" class="ss-q-checkbox"></span>
 <span class="ss-choice-label">Microphone</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.2014351691" value="Flipchart" id="group_2014351691_5" role="radio" class="ss-q-radio" aria-label="Flipchart" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Flipchart" id="group_2014351691_5" role="checkbox" class="ss-q-checkbox"></span>
 <span class="ss-choice-label">Flipchart</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.2014351691" value="Pens" id="group_2014351691_6" role="radio" class="ss-q-radio" aria-label="Pens" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Pens" id="group_2014351691_6" role="checkbox" class="ss-q-checkbox"></span>
 <span class="ss-choice-label">Pens</span>
-</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.2014351691" value="__other_option__" id="group_2014351691_7" role="radio" class="ss-q-radio ss-q-other-toggle" required="" aria-required="true"></span>
+</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="__other_option__" id="group_2014351691_7" role="checkbox" class="ss-q-checkbox ss-q-other-toggle"></span>
 <span class="ss-choice-label">&nbsp;</span></label>
-<span class="ss-q-other-container goog-inline-block"><input placeholder="Other:" type="text" name="entry.2014351691.other_option_response" value="" class="ss-q-other" id="entry_2014351691_other_option_response" dir="auto" aria-label="Other"></span>
+<span class="ss-q-other-container goog-inline-block"><input placeholder="Other:"  type="text" name="entry.2014351691.other_option_response" value="" class="ss-q-other" id="entry_2014351691_other_option_response" dir="auto" aria-label="Other"></span>
 </li></ul>
+
 <div class="error-message" id="2059408904_errorMessage"></div>
-<div class="required-message">This is a required question</div></div></div></div>
+<div class="required-message">&nbsp;</div></div></div></div>
 
 <div class="participants">
   <table>
