cfp es bugfixes

--- a/source/call-for-proposals-form.html
+++ b/source/call-for-proposals-form.html
@@ -382,15 +382,18 @@ lang: en
 
 </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
 <div dir="auto" class="ss-item ss-item-required ss-radio"><div class="ss-form-entry">
-<label class="ss-q-item-label" for="entry_2059408904"><div class="ss-q-title">Resources Required
-<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
-</div>
+<label class="ss-q-item-label" for="entry_2059408904">
+  <div class="ss-q-title">Resources Required</div>
 <div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
 
-<ul class="ss-choices" role="group" aria-label="Resources Required  "><li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Wifi" id="group_2014351691_1" role="checkbox" class="ss-q-checkbox"></span>
-<span class="ss-choice-label">Wifi</span>
-</label></li> <li class="ss-choice-item">
+<ul class="ss-choices" role="group" aria-label="Resources Required  ">
+  <li class="ss-choice-item">
+  <label>
+    <span class="ss-choice-item-control goog-inline-block">
+      <input type="checkbox" name="entry.2014351691" value="Wifi" id="group_2014351691_1" role="checkbox" class="ss-q-checkbox">
+    </span>
+    <span class="ss-choice-label">Wifi</span>
+    </label></li> <li class="ss-choice-item">
 <label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Computer" id="group_2014351691_2" role="checkbox" class="ss-q-checkbox"></span>
 <span class="ss-choice-label">Computer</span>
 </label></li> <li class="ss-choice-item">
