--- a/source/call-for-proposals-form_es.html
+++ b/source/call-for-proposals-form_es.html
@@ -388,30 +388,56 @@ lang: es
 
 <div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
 
-<ul class="ss-choices" role="group" aria-label="Recursos Requeridos  "><li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Wifi" id="group_2014351691_1" role="checkbox" class="ss-q-checkbox" aria-label="Wifi" required="" aria-required="true"></span>
-<span class="ss-choice-label">Wifi</span>
-</label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Computer" id="group_2014351691_2" role="checkbox" class="ss-q-checkbox" aria-label="Computadora" required="" aria-required="true"></span>
+<ul class="ss-choices" role="group" aria-label="Recursos Requeridos  ">
+  <li class="ss-choice-item">
+  <label>
+    <span class="ss-choice-item-control goog-inline-block">
+      <input type="checkbox" name="entry.2014351691" value="Wifi" id="group_2014351691_1" role="checkbox" class="ss-q-checkbox">
+    </span>
+    <span class="ss-choice-label">Wifi</span>
+    </label></li> <li class="ss-choice-item">
+<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Computer" id="group_2014351691_2" role="checkbox" class="ss-q-checkbox"></span>
 <span class="ss-choice-label">Computadora</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Projector" id="group_2014351691_3" role="checkbox" class="ss-q-checkbox" aria-label="Proyector" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Projector" id="group_2014351691_3" role="checkbox" class="ss-q-checkbox"></span>
 <span class="ss-choice-label">Proyector</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Microphone" id="group_2014351691_4" role="checkbox" class="ss-q-checkbox" aria-label="Micrófono" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Microphone" id="group_2014351691_4" role="checkbox" class="ss-q-checkbox"></span>
 <span class="ss-choice-label">Micrófono</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Flipchart" id="group_2014351691_5" role="checkbox" class="ss-q-checkbox" aria-label="Rotafolio" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Flipchart" id="group_2014351691_5" role="checkbox" class="ss-q-checkbox"></span>
 <span class="ss-choice-label">Rotafolio</span>
 </label></li> <li class="ss-choice-item">
-<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Pens" id="group_2014351691_6" role="checkbox" class="ss-q-checkbox" aria-label="Lapiceras" required="" aria-required="true"></span>
+<label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="Pens" id="group_2014351691_6" role="checkbox" class="ss-q-checkbox"></span>
 <span class="ss-choice-label">Lapiceras</span>
-</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="__other_option__" id="group_2014351691_7" role="radio" class="ss-q-checkbox ss-q-other-toggle" required="" aria-required="true"></span>
+</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="checkbox" name="entry.2014351691" value="__other_option__" id="group_2014351691_7" role="checkbox" class="ss-q-checkbox ss-q-other-toggle"></span>
 <span class="ss-choice-label">&nbsp;</span></label>
-<span class="ss-q-other-container goog-inline-block"><input type="text" name="entry.2014351691.other_option_response" placeholder="Otras Necesidades:" value="" class="ss-q-other" id="entry_2014351691_other_option_response" dir="auto" aria-label="Otras Necesidades"></span>
+<span class="ss-q-other-container goog-inline-block"><input placeholder="Otras Necesidades:"  type="text" name="entry.2014351691.other_option_response" value="" class="ss-q-other" id="entry_2014351691_other_option_response" dir="auto" aria-label="Other"></span>
 </li></ul>
+
 <div class="error-message" id="2059408904_errorMessage"></div>
-<div class="required-message">Esta pregunta es obligatoria</div></div></div></div>
+<div class="required-message">&nbsp;</div></div></div></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <div class="participants">
   <table>
