Add links to faq

--- a/source/index_es.html
+++ b/source/index_es.html
@@ -18,6 +18,7 @@ hide_back_button: true
     <a class="button" href="/about.html">ACERCA DE IODC 2018</a>
     <a class="button" href="/committee.html">COMITÉ ACADÉMICO</a>
     <a class="button" href="/code-of-conduct.html">CÓDIGO DE CONDUCTA</a>
+    <a class="button" href="/faq.html">PREGUNTAS FRECUENTES</a>
   </nav>
 
   <div class="past-events section">
