--- a/source/index.html
+++ b/source/index.html
@@ -18,6 +18,7 @@ hide_back_button: true
     <a class="button" href="/about.html">About</a>
     <a class="button" href="/committee.html">Programme Committee</a>
     <a class="button" href="/code-of-conduct.html">Code of Conduct</a>
+    <a class="button" href="/faq.html">FAQ</a>
   </nav>
 
   <div class="past-events section">
