Replace í with &Iacute;

--- a/source/faq_es.html
+++ b/source/faq_es.html
@@ -16,7 +16,7 @@ lang: es
     <ul>
       <li>
         <strong>¿Debo inscribirme si envié una propuesta para la agenda?</strong> <br>
-        <span>Sí, todos los que quieran participar, ya sea como expositores o asistentes, deben registrarse. Esto es fundamental para que puedas obtener tu credencial de acceso.</span>
+        <span>S&Iacute;, todos los que quieran participar, ya sea como expositores o asistentes, deben registrarse. Esto es fundamental para que puedas obtener tu credencial de acceso.</span>
       </li>
       <li>
         <strong>¿Debo abonar el registro?</strong> <br>
@@ -24,11 +24,11 @@ lang: es
       </li>
       <li>
         <strong>¿Hasta cuándo estará abierto el registro para participar y asistir al evento?</strong> <br>
-        <span>El registro permanecerá abierto hasta el día del evento inclusive. Se realizará inscripción en el hall del lugar.</span>
+        <span>El registro permanecerá abierto hasta el d&Iacute;a del evento inclusive. Se realizará inscripción en el hall del lugar.</span>
       </li>
       <li>
-        <strong>¿Puedo registrarme el mismo día del evento?</strong> <br>
-        <span>Sí, podés registrarte en la sede del evento los días 27 y 28 de septiembre. Sin embargo, recomendamos registrarse previamente para facilitar el ingreso.</span>
+        <strong>¿Puedo registrarme el mismo d&Iacute;a del evento?</strong> <br>
+        <span>S&Iacute;, podés registrarte en la sede del evento los d&Iacute;as 27 y 28 de septiembre. Sin embargo, recomendamos registrarse previamente para facilitar el ingreso.</span>
       </li>
       <li>
         <strong>Una vez completado el registro, ¿me van a avisar si estoy correctamente inscripto al evento?</strong> <br>
@@ -39,11 +39,11 @@ lang: es
     <ul>
       <li>
         <strong>¿Necesito visa para ingresar a Argentina?</strong> <br>
-        <span>Podés encontrar información sobre ingreso al país en <a href="http://argentina.gob.ar/tema/extranjeros/turistas">argentina.gob.ar/tema/extranjeros/turistas</a>.</span>
+        <span>Podés encontrar información sobre ingreso al pa&Iacute;s en <a href="http://argentina.gob.ar/tema/extranjeros/turistas">argentina.gob.ar/tema/extranjeros/turistas</a>.</span>
       </li>
     </ul>
     <h2 style="text-align:center;">Agenda y sesiones</h2>
-    <ul>
+    <ul>&Iacute;
       <li>
         <strong>¿Dónde se realizará la Conferencia?</strong> <br>
         <span>La Conferencia se realizará los días 27 y 28 de septiembre en la Usina del Arte,  Agustín R. Caffarena 1.</span>
