Comment out submission for proposals - english version

--- a/source/call-for-proposals.html
+++ b/source/call-for-proposals.html
@@ -16,9 +16,9 @@ lang: en
     <p>Publication of conference programme | <strong>June 1, 2018</strong></p>
   </div>
 
-  <div class="section">
+<!--   <div class="section">
     <a class="button" href="/call-for-proposals-form.html">Submit Proposal</a>
-  </div>
+  </div> -->
 
   <div class="section cfp long-text long-text--negative">
     <h1 style="text-align:center;">IODC 2018 - The Future is Open</h1>
