Comment out submission for proposals - spanish version

--- a/source/call-for-proposals_es.html
+++ b/source/call-for-proposals_es.html
@@ -16,9 +16,9 @@ lang: es
     <p>Publicación del programa de la conferencia | <strong>1 de junio de 2018</strong></p>
   </div>
 
-  <div class="section">
+<!--   <div class="section">
     <a class="button" href="call-for-proposals-form.html">ENVIAR PROPUESTA</a>
-  </div>
+  </div> -->
 
   <div class="section cfp long-text long-text--negative">
     <h1 style="text-align:center;">IODC 2018 - El Futuro es Abierto</h1>
